# pico-ssh

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/: CMakeLists.txt  main.c  tasks.c
